--- a/src/main/resources/spring-frontend/profile.html
+++ b/src/main/resources/spring-frontend/profile.html
@@ -43,32 +43,90 @@
     <div class="Header-rowMain">
       <div class="wrap">
         <div class="row">
-          <div class="row-block Header-logo"><a class="logo" href="/"><img class="logo-image" src="/assets/img/logo.png" alt="logo.png"/><span class="logo-text">BOOKSHOP</span></a>
+          <div class="row-block Header-logo"><a class="logo" href="/"><img class="logo-image"
+                                                                           src="/assets/img/logo.png"
+                                                                           alt="logo.png"/><span
+                  class="logo-text">BOOKSHOP</span></a>
           </div>
           <div class="Header-searchWrap row-block">
-            <div class="Header-searchLink"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"><g><g><path fill="#b8b8b8" d="M17.812 17.852c.25.268.25.69 0 .948a.622.622 0 0 1-.457.2.64.64 0 0 1-.457-.2l-5.364-5.494a7.07 7.07 0 0 1-4.32 1.47C3.232 14.777 0 11.457 0 7.389 0 3.321 3.232 0 7.214 0c3.983 0 7.214 3.32 7.214 7.388 0 1.94-.74 3.7-1.926 5.015zM7.214 13.44c3.264 0 5.909-2.708 5.909-6.05 0-3.344-2.655-6.052-5.909-6.052-3.264 0-5.908 2.72-5.908 6.051 0 3.332 2.644 6.051 5.908 6.051z"/></g></g></svg>
+            <div class="Header-searchLink">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19">
+                <g>
+                  <g>
+                    <path fill="#b8b8b8"
+                          d="M17.812 17.852c.25.268.25.69 0 .948a.622.622 0 0 1-.457.2.64.64 0 0 1-.457-.2l-5.364-5.494a7.07 7.07 0 0 1-4.32 1.47C3.232 14.777 0 11.457 0 7.389 0 3.321 3.232 0 7.214 0c3.983 0 7.214 3.32 7.214 7.388 0 1.94-.74 3.7-1.926 5.015zM7.214 13.44c3.264 0 5.909-2.708 5.909-6.05 0-3.344-2.655-6.052-5.909-6.052-3.264 0-5.908 2.72-5.908 6.051 0 3.332 2.644 6.051 5.908 6.051z"/>
+                  </g>
+                </g>
+              </svg>
             </div>
             <div class="Header-search">
               <div class="search">
-                <form class="form form_search" action="#" method="post" data-searchlimit="20">
-                  <input class="search-input" id="query" name="query" type="text" placeholder="Search over 30 million book titles" value=""/>
-                  <button class="search-button" type="submit" name="search" id="search">Поиск
+                <form class="form form_search" action="#" method="post" data-searchlimit="20"
+                      th:object="${searchWordDto}">
+                  <input class="search-input" id="querypage" name="querypage" type="text"
+                         placeholder="Search over 30 million book titles"
+                         th:field="*{example}"
+                         value="Техника"/>
+                  <button class="search-button" type="submit" name="searchpage" id="searchpage">Поиск
                   </button>
                 </form>
               </div>
             </div>
+            <span th:if="${searchError}" th:text="${searchError.getLocalizedMessage()}"
+                  style="color: red"></span>
           </div>
           <div class="row-block Header-cart">
-            <div class="CartBlock"><a class="CartBlock-block" href="/my.html">
-                <svg class="CartBlock-img" width="30" height="30" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 412.72 412.72" style="enable-background:new 0 0 412.72 412.72;" xml:space="preserve"><g> <g> <path d="M404.72,82.944c-0.027,0-0.054,0-0.08,0h0h-27.12v-9.28c0.146-3.673-2.23-6.974-5.76-8 c-18.828-4.934-38.216-7.408-57.68-7.36c-32,0-75.6,7.2-107.84,40c-32-33.12-75.92-40-107.84-40 c-19.464-0.048-38.852,2.426-57.68,7.36c-3.53,1.026-5.906,4.327-5.76,8v9.2H8c-4.418,0-8,3.582-8,8v255.52c0,4.418,3.582,8,8,8 c1.374-0.004,2.724-0.362,3.92-1.04c0.8-0.4,80.8-44.16,192.48-16h1.2h0.72c0.638,0.077,1.282,0.077,1.92,0 c112-28.4,192,15.28,192.48,16c2.475,1.429,5.525,1.429,8,0c2.46-1.42,3.983-4.039,4-6.88V90.944 C412.72,86.526,409.139,82.944,404.72,82.944z M16,333.664V98.944h19.12v200.64c-0.05,4.418,3.491,8.04,7.909,8.09 c0.432,0.005,0.864-0.025,1.291-0.09c16.55-2.527,33.259-3.864,50-4c23.19-0.402,46.283,3.086,68.32,10.32 C112.875,307.886,62.397,314.688,16,333.664z M94.32,287.664c-14.551,0.033-29.085,0.968-43.52,2.8V79.984 c15.576-3.47,31.482-5.241,47.44-5.28c29.92,0,71.2,6.88,99.84,39.2l0.24,199.28C181.68,302.304,149.2,287.664,94.32,287.664z M214.32,113.904c28.64-32,69.92-39.2,99.84-39.2c15.957,0.047,31.863,1.817,47.44,5.28v210.48 c-14.354-1.849-28.808-2.811-43.28-2.88c-54.56,0-87.12,14.64-104,25.52V113.904z M396.64,333.664 c-46.496-19.028-97.09-25.831-146.96-19.76c22.141-7.26,45.344-10.749,68.64-10.32c16.846,0.094,33.663,1.404,50.32,3.92 c4.368,0.663,8.447-2.341,9.11-6.709c0.065-0.427,0.095-0.859,0.09-1.291V98.944h19.12L396.64,333.664z"/> </g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g></svg><span class="CartBlock-amount">0</span></a><a class="CartBlock-block" href="/postponed.html">
-                <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" height="23" width="23" viewBox="0 0 512 512"><g> <g> <path fill="#5e5e5e" d="M511.812,167.165c-1.702-36.088-16.232-70.306-40.914-96.353c-25.567-26.981-59.251-41.993-94.847-42.272 c-34.009-0.257-63.948,12.15-88.992,36.905c-14.257,14.091-24.699,30.11-32.057,44.104c-7.358-13.994-17.8-30.013-32.057-44.104 c-25.047-24.754-55.004-37.158-88.993-36.905c-35.545,0.278-68.917,15.336-93.967,42.4C16.029,96.82,1.896,130.993,0.19,167.165 c-4.464,94.635,70.036,158.12,182.806,254.216c19.824,16.893,40.324,34.362,62.129,53.441l9.877,8.643l9.877-8.643 c23.121-20.23,44.813-38.641,65.789-56.445C442.411,323.538,516.232,260.884,511.812,167.165z M439.818,275.475 c-29.97,36.353-73.478,73.279-128.562,120.03c-18.057,15.325-36.642,31.099-56.253,48.129 c-18.29-15.892-35.664-30.698-52.55-45.087c-55.77-47.524-99.819-85.061-130.02-121.835 c-30.986-37.731-44.024-71.079-42.276-108.133c2.89-61.271,48.585-109.605,104.029-110.039c0.271-0.002,0.533-0.003,0.803-0.003 c57.965,0,87.525,49.314,100.005,78.802c3.424,8.09,11.278,13.318,20.007,13.318c8.729,0,16.583-5.228,20.007-13.318 c12.48-29.49,42.033-78.801,100.004-78.801c0.267,0,0.535,0.001,0.803,0.003c55.624,0.435,103.188,49.799,106.029,110.039 C483.57,205.158,470.609,238.125,439.818,275.475z"/> </g> </g></svg><span class="CartBlock-amount">0</span></a><a class="CartBlock-block" href="/cart.html">
-                <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" width="30" height="23" viewBox="0 0 30 23"><g><g><path fill="#5e5e5e" d="M.676 0H6.41c.31 0 .58.242.656.542l.969 3.863c.463-.392 1.052-.694 1.683-.694H27.33c1.448 0 2.67 1.314 2.67 2.793 0 .033-.002.13-.007.162l-1.33 9.017a.659.659 0 0 1-.018.086c-.473 1.644-1.294 2.255-1.979 2.467.373.497.597 1.102.597 1.77 0 1.642-1.34 2.962-2.986 2.962-1.646 0-2.986-1.368-2.986-3.01 0-.622.193-1.067.52-1.742h-6.225c.327.675.52 1.12.52 1.741 0 1.643-1.34 3.043-2.986 3.043a2.986 2.986 0 0 1-2.985-2.98c0-.661.22-1.273.588-1.769-1.291-.37-1.763-1.797-1.98-2.457a.711.711 0 0 1-.022-.093L7.059 6.675a.86.86 0 0 1-.01-.138c0-.126.011-.281.028-.403L5.883 1.349H.676A.676.676 0 1 1 .676 0zm14.078 20.021a1.633 1.633 0 0 0-3.267 0 1.633 1.633 0 0 0 3.267 0zm11.157 0a1.633 1.633 0 0 0-3.267 0 1.633 1.633 0 0 0 3.267 0zM8.439 6.172c-.002.023-.005.1-.01.121-.012.067-.025.119-.028.189l1.642 8.873c.437 1.311.837 1.512 1.337 1.512h14.622c.718 0 1.119-.802 1.33-1.52l1.316-8.887c-.024-.729-.618-1.4-1.317-1.4H9.718c-.608 0-1.135.515-1.279 1.112z"/></g></g></svg><span class="CartBlock-amount">0</span></a><a class="CartBlock-block CartBlock-block_text" href="/profile.html">
-                <svg class="CartBlock-img" height="30" viewBox="0 0 511.989 511.989" width="30" xmlns="http://www.w3.org/2000/svg"><g><path d="m470.994 330c0-24.146-17.205-44.348-40-48.994v-54.006c0-4.92-2.412-9.526-6.456-12.329s-9.206-3.445-13.811-1.716l-28.629 10.736c-18.8-19.545-41.652-34.266-66.694-43.303 24.608-18.234 40.59-47.478 40.59-80.388 0-55.141-44.859-100-100-100s-100 44.859-100 100c0 32.91 15.982 62.154 40.59 80.388-25.043 9.038-47.894 23.759-66.694 43.303l-28.629-10.736c-4.606-1.729-9.768-1.087-13.811 1.716-4.044 2.803-6.456 7.409-6.456 12.329v54.006c-22.795 4.646-40 24.847-40 48.994s17.205 44.348 40 48.994v58.006c0 6.253 3.879 11.85 9.733 14.045l160 60c3.374 1.258 7.159 1.258 10.533 0l160-60c5.854-2.195 9.733-7.792 9.733-14.045v-58.006c22.796-4.646 40.001-24.848 40.001-48.994zm-285-230c0-38.598 31.402-70 70-70s70 31.402 70 70-31.402 70-70 70-70-31.402-70-70zm70 100c35.143 0 68.709 12.701 94.899 35.393l-94.899 35.587-94.899-35.587c26.191-22.692 59.757-35.393 94.899-35.393zm-185 130c0-11.028 8.972-20 20-20h10v40h-10c-11.028 0-20-8.972-20-20zm40 49.497c11.397-2.323 20-12.424 20-24.497v-50c0-12.073-8.603-22.174-20-24.497v-31.858l130 48.75v177.961l-130-48.75zm160 95.858v-177.96l130-48.75v31.858c-11.397 2.323-20 12.424-20 24.497v50c0 12.073 8.603 22.174 20 24.497v47.108zm150-125.355h-10v-40h10c11.028 0 20 8.972 20 20s-8.971 20-20 20z"/></g></svg><span class="CartBlock-text">Дмитрий Петров</span><span class="CartBlock-budget">На счете 100 рублей</span></a>
+            <div class="CartBlock"><a class="CartBlock-block" th:href="@{/shop/postponed}"
+                                      href="/postponed.html">
+              <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" height="23" width="23"
+                   viewBox="0 0 512 512">
+                <g>
+                  <g>
+                    <path fill="#5e5e5e"
+                          d="M511.812,167.165c-1.702-36.088-16.232-70.306-40.914-96.353c-25.567-26.981-59.251-41.993-94.847-42.272 c-34.009-0.257-63.948,12.15-88.992,36.905c-14.257,14.091-24.699,30.11-32.057,44.104c-7.358-13.994-17.8-30.013-32.057-44.104 c-25.047-24.754-55.004-37.158-88.993-36.905c-35.545,0.278-68.917,15.336-93.967,42.4C16.029,96.82,1.896,130.993,0.19,167.165 c-4.464,94.635,70.036,158.12,182.806,254.216c19.824,16.893,40.324,34.362,62.129,53.441l9.877,8.643l9.877-8.643 c23.121-20.23,44.813-38.641,65.789-56.445C442.411,323.538,516.232,260.884,511.812,167.165z M439.818,275.475 c-29.97,36.353-73.478,73.279-128.562,120.03c-18.057,15.325-36.642,31.099-56.253,48.129 c-18.29-15.892-35.664-30.698-52.55-45.087c-55.77-47.524-99.819-85.061-130.02-121.835 c-30.986-37.731-44.024-71.079-42.276-108.133c2.89-61.271,48.585-109.605,104.029-110.039c0.271-0.002,0.533-0.003,0.803-0.003 c57.965,0,87.525,49.314,100.005,78.802c3.424,8.09,11.278,13.318,20.007,13.318c8.729,0,16.583-5.228,20.007-13.318 c12.48-29.49,42.033-78.801,100.004-78.801c0.267,0,0.535,0.001,0.803,0.003c55.624,0.435,103.188,49.799,106.029,110.039 C483.57,205.158,470.609,238.125,439.818,275.475z"/>
+                  </g>
+                </g>
+              </svg>
+              <span class="CartBlock-amount">0</span>
+            </a>
+              <a class="CartBlock-block"
+                 th:href="@{/shop/cart}"
+                 href="/cart.html">
+                <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" width="30" height="23"
+                     viewBox="0 0 30 23">
+                  <g>
+                    <g>
+                      <path fill="#5e5e5e"
+                            d="M.676 0H6.41c.31 0 .58.242.656.542l.969 3.863c.463-.392 1.052-.694 1.683-.694H27.33c1.448 0 2.67 1.314 2.67 2.793 0 .033-.002.13-.007.162l-1.33 9.017a.659.659 0 0 1-.018.086c-.473 1.644-1.294 2.255-1.979 2.467.373.497.597 1.102.597 1.77 0 1.642-1.34 2.962-2.986 2.962-1.646 0-2.986-1.368-2.986-3.01 0-.622.193-1.067.52-1.742h-6.225c.327.675.52 1.12.52 1.741 0 1.643-1.34 3.043-2.986 3.043a2.986 2.986 0 0 1-2.985-2.98c0-.661.22-1.273.588-1.769-1.291-.37-1.763-1.797-1.98-2.457a.711.711 0 0 1-.022-.093L7.059 6.675a.86.86 0 0 1-.01-.138c0-.126.011-.281.028-.403L5.883 1.349H.676A.676.676 0 1 1 .676 0zm14.078 20.021a1.633 1.633 0 0 0-3.267 0 1.633 1.633 0 0 0 3.267 0zm11.157 0a1.633 1.633 0 0 0-3.267 0 1.633 1.633 0 0 0 3.267 0zM8.439 6.172c-.002.023-.005.1-.01.121-.012.067-.025.119-.028.189l1.642 8.873c.437 1.311.837 1.512 1.337 1.512h14.622c.718 0 1.119-.802 1.33-1.52l1.316-8.887c-.024-.729-.618-1.4-1.317-1.4H9.718c-.608 0-1.135.515-1.279 1.112z"/>
+                    </g>
+                  </g>
+                </svg>
+                <span class="CartBlock-amount">0</span></a><a class="CartBlock-block" th:href="@{/my}" href="/signin.html">
+                <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" width="22" height="23"
+                     viewBox="0 0 22 23">
+                  <g>
+                    <g>
+                      <path fill="#5e5e5e"
+                            d="M22 23h-1.472c-.284-3.64-2.704-6.69-6.035-7.971a8.196 8.196 0 0 1-3.493.784 8.198 8.198 0 0 1-3.493-.784c-3.33 1.28-5.75 4.331-6.035 7.97H0c.262-3.886 2.635-7.204 6.005-8.884-1.88-1.447-3.091-3.687-3.091-6.209C2.914 3.54 6.534 0 11 0s8.086 3.54 8.086 7.906c0 2.522-1.211 4.762-3.091 6.21C19.365 15.794 21.738 19.112 22 23zM17.616 7.906c0-3.573-2.962-6.469-6.616-6.469-3.654 0-6.616 2.896-6.616 6.47 0 3.572 2.962 6.468 6.616 6.468 3.654 0 6.616-2.896 6.616-6.469z"/>
+                    </g>
+                  </g>
+                </svg>
+                <span class="CartBlock-amount">0</span></a><a class="CartBlock-block CartBlock-block_text"
+                                                              th:href="@{/profile}" href="/profile.html">
+                <svg class="CartBlock-img" height="30" viewBox="0 0 511.989 511.989" width="30"
+                     xmlns="http://www.w3.org/2000/svg">
+                  <g>
+                    <path d="m470.994 330c0-24.146-17.205-44.348-40-48.994v-54.006c0-4.92-2.412-9.526-6.456-12.329s-9.206-3.445-13.811-1.716l-28.629 10.736c-18.8-19.545-41.652-34.266-66.694-43.303 24.608-18.234 40.59-47.478 40.59-80.388 0-55.141-44.859-100-100-100s-100 44.859-100 100c0 32.91 15.982 62.154 40.59 80.388-25.043 9.038-47.894 23.759-66.694 43.303l-28.629-10.736c-4.606-1.729-9.768-1.087-13.811 1.716-4.044 2.803-6.456 7.409-6.456 12.329v54.006c-22.795 4.646-40 24.847-40 48.994s17.205 44.348 40 48.994v58.006c0 6.253 3.879 11.85 9.733 14.045l160 60c3.374 1.258 7.159 1.258 10.533 0l160-60c5.854-2.195 9.733-7.792 9.733-14.045v-58.006c22.796-4.646 40.001-24.848 40.001-48.994zm-285-230c0-38.598 31.402-70 70-70s70 31.402 70 70-31.402 70-70 70-70-31.402-70-70zm70 100c35.143 0 68.709 12.701 94.899 35.393l-94.899 35.587-94.899-35.587c26.191-22.692 59.757-35.393 94.899-35.393zm-185 130c0-11.028 8.972-20 20-20h10v40h-10c-11.028 0-20-8.972-20-20zm40 49.497c11.397-2.323 20-12.424 20-24.497v-50c0-12.073-8.603-22.174-20-24.497v-31.858l130 48.75v177.961l-130-48.75zm160 95.858v-177.96l130-48.75v31.858c-11.397 2.323-20 12.424-20 24.497v50c0 12.073 8.603 22.174 20 24.497v47.108zm150-125.355h-10v-40h10c11.028 0 20 8.972 20 20s-8.971 20-20 20z"/>
+                  </g>
+                </svg>
+                <span class="CartBlock-text">Дмитрий Петров</span><span class="CartBlock-budget">На счете 100 рублей</span></a>
+              <a th:href="@{/logout}">Выход</a>
             </div>
           </div>
           <div class="row-block Header-trigger"><a class="menuTrigger" href="#navigate">
-              <div class="menuTrigger-content">Показать навигацию
-              </div><span></span><span></span><span></span></a>
+            <div class="menuTrigger-content">Показать навигацию
+            </div>
+            <span></span><span></span><span></span></a>
           </div>
         </div>
       </div>
@@ -77,15 +135,20 @@
       <div class="wrap">
         <nav class="menuModal" id="navigate">
           <ul class="menu menu_main">
-            <li class="menu-item"><a class="menu-link" href="/index.html">Главная</a>
+            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="index.html"
+                                                      th:href="@{/}" th:text="#{topbar.main}">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="genres.html"
+                                     th:href="@{/genres/}" th:text="#{topbar.genres}">Жанры</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
+            <li class="menu-item"><a class="menu-link" href="nove.html"
+                                     th:href="@{/books/recent}" th:text="#{topbar.news}">Новинки</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
+            <li class="menu-item"><a class="menu-link" href="popular.html"
+                                     th:href="@{/books/popular}" th:text="#{topbar.popular}">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="authors.html"
+                                     th:href="@{/authors}" th:text="#{topbar.authors}">Авторы</a>
             </li>
           </ul>
         </nav>
@@ -134,7 +197,7 @@
                       <div class="form-group">
                         <label class="form-label" for="phone">Телефон
                         </label>
-                        <input class="form-input" id="phone" name="phone" type="text"  th:value="${curUsr?.phone}" value="+70000000000" data-mask="+7 (999) 999-99-99" data-validate="require"/>
+                        <input class="form-input" id="phone" name="phone" type="text"    value="+70000000000" data-mask="+7 (999) 999-99-99" data-validate="require"/>
                         <div class="Profile-btn Profile-btn_confirm">
                           <button class="btn btn_primary" type="button">Подтвердить
                           </button>
